--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         alt="header"></td>
 </tr>
 <tr>
-    <td colspan="2" align="center" width="1500" height="60"><a href="https://ganeshaoperation.com/" <div class="progress"></div>
-    </div>Ganesha Operation<a></a></td>
+    <td colspan="2" align="center" width="1500" height="60"><a href="https://novtbrtiii.github.io/tugas2/" <div class="progress"></div>
+    </div>Tugas 2<a></a></td>
 </tr>
     <th align="center">
 <p>LET'S JOIN WITH US</p>
@@ -51,4 +51,5 @@ tetapi juga untuk memberikan pengalaman yg baru bagi mereka.</p>
     <b>C</b>ome <b>T</b>rue </i></u>
 </tr>
 </body>
+
 </html>
