--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         alt="header"></td>
 </tr>
 <tr>
-    <td colspan="2" align="center" width="1500" height="60"><a href="https://novtbrtiii.github.io/tugas2/" <div class="progress"></div>
-    </div>Tugas 2<a></a></td>
+    <td colspan="2" align="center" width="1500" height="60">
+        <a href="https://novtbrtiii.github.io/tugas2/" <div class="progress"></div></div>Tugas 2<a></a>
+        <a href="https://novtbrtiii.github.io/tugas3/" <div class="progress"></div></div>Tugas 3<a></a>    
+    </td>
 </tr>
     <th align="center">
 <p>LET'S JOIN WITH US</p>
@@ -53,3 +55,4 @@ tetapi juga untuk memberikan pengalaman yg baru bagi mereka.</p>
 </body>
 
 </html>
+
